Added unit tests for Hexagon, GameLogic and Utilities classes